# syndicate-rule-engine

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  .isort.cfg  CHANGELOG.md  Makefile  QUICKSTART.md  README.md  cadf_event.json  d.jsonl  data2.json  data_meta.json  eu-west-1.jsonl  models.json  models_ATTACK_VECTOR.json  models_COMPLIANCE.json  models_FINOPS.json  models_OVERVIEW.json  models_RESOURCES.json  mongo.json  mypy.ini  pyproject.toml  release-5.15.0.md  test.env  tox.ini  txt.json
.github/workflows/: build-and-check-python-package.yml  ci.yaml  ci.yml
backu/: difference.py
c7n/: CHANGELOG.md  README.md  api_module.json  pyproject.toml  setup.py
c7n/autocomplete/: .c7n-complete.bash  .c7n-complete.fish  .c7n-complete.zsh
c7n/c7ncli/: version.py
c7n/c7ncli/group/: __init__.py  application.py  application_access.py  application_dojo.py  c7n.py  customer.py  customer_rabbitmq.py  integrations.py  integrations_chronicle.py  integrations_dojo.py  integrations_sre.py  job.py  job_event.py  job_scheduled.py  license.py  meta.py  metrics.py  parent.py  platform.py  platform_k8s.py  policy.py  report.py  report_compliance.py  report_details.py  report_digests.py  report_errors.py  report_errors_accumulated.py  report_errors_jobs.py  report_findings.py  report_push.py  report_raw.py  report_resource.py  report_rules.py  results.py  role.py  rule.py  ruleset.py  ruleset_eventdriven.py  rulesource.py  setting.py  (+18 more)
c7n/c7ncli/service/: adapter_client.py  config.py  constants.py  credentials.py  helpers.py  logger.py
c7n/docs/: README.md  cleanup.md  configure.md  health_check.md  login.md  show_config.md
c7n/docs/application/: add.md  delete.md  describe.md  index.md  update.md
c7n/docs/customer/: describe.md  index.md
c7n/docs/job/: describe.md  index.md  submit.md  terminate.md
c7n/docs/job/scheduled/: add.md  delete.md  describe.md  index.md  update.md
c7n/docs/lm/: delete.md  describe.md  index.md  sync.md
c7n/docs/parent/: add.md  delete.md  describe.md  index.md  link_tenant.md  unlink_tenant.md  update.md
c7n/docs/policy/: add.md  clean_cache.md  delete.md  describe.md  index.md  update.md
c7n/docs/report/: clevel.md  department.md  index.md  operational.md  project.md
c7n/docs/report/compliance/: accumulated.md  index.md  jobs.md
c7n/docs/report/details/: accumulated.md  index.md  jobs.md
c7n/docs/report/digests/: accumulated.md  index.md  jobs.md
c7n/docs/report/errors/: index.md
c7n/docs/report/errors/accumulated/: access.md  core.md  index.md  total.md
c7n/docs/report/errors/jobs/: access.md  core.md  index.md  total.md
c7n/docs/report/push/: dojo.md  index.md  security_hub.md
c7n/docs/report/rules/: accumulated.md  index.md  jobs.md
c7n/docs/results/: describe.md  index.md
c7n/docs/role/: add.md  clean_cache.md  delete.md  describe.md  index.md  update.md
c7n/docs/rule/: delete.md  describe.md  index.md  update.md
c7n/docs/ruleset/: add.md  delete.md  describe.md  index.md  update.md
c7n/docs/ruleset/eventdriven/: add.md  delete.md  describe.md  index.md
c7n/docs/rulesource/: add.md  delete.md  describe.md  index.md  update.md
c7n/docs/setting/: index.md
c7n/docs/setting/lm/: index.md
c7n/docs/setting/lm/client/: add.md  delete.md  describe.md  index.md
c7n/docs/setting/lm/config/: add.md  delete.md  describe.md  index.md
c7n/docs/setting/mail/: add.md  delete.md  describe.md  index.md
c7n/docs/siem/: index.md
c7n/docs/siem/add/: dojo.md  index.md  security_hub.md
c7n/docs/siem/delete/: dojo.md  index.md  security_hub.md
c7n/docs/siem/describe/: dojo.md  index.md  security_hub.md
c7n/docs/siem/update/: dojo.md  index.md  security_hub.md
c7n/docs/tenant/: create.md  describe.md  index.md  update.md
c7n/docs/tenant/credentials/: add.md  delete.md  describe.md  index.md  update.md
c7n/docs/tenant/findings/: delete.md  describe.md  index.md
c7n/docs/tenant/region/: activate.md  index.md
c7n/docs/trigger/: configuration_backup.md  index.md
c7n/docs/user/: index.md  signup.md
c7n/docs/user/tenants/: assign.md  describe.md  index.md  unassign.md
cli/: CHANGELOG.md  README.md  api_module.json  pyproject.toml
cli/srecli/: __init__.py  version.py
cli/srecli/group/: __init__.py  customer.py  customer_rabbitmq.py  integrations.py  integrations_chronicle.py  integrations_dojo.py  integrations_event.py  integrations_event_sources.py  integrations_re.py  integrations_sre.py  job.py  job_event.py  job_event_maestro.py  job_scheduled.py  license.py  meta.py  metadata.py  metrics.py  platform.py  platform_k8s.py  policy.py  report.py  report_compliance.py  report_details.py  report_digests.py  report_errors.py  report_findings.py  report_push.py  report_raw.py  report_resource.py  report_rules.py  resource.py  resource_exception.py  results.py  role.py  rule.py  ruleset.py  ruleset_eventdriven.py  rulesource.py  service.py  (+12 more)
cli/srecli/service/: adapter_client.py  config.py  constants.py  credentials.py  creds.py  helpers.py  logger.py
deployment/compose/: README.md  compose.yaml  dojo-compose.yaml  generate_random_envs.py  github_requirements.yml
deployment/helm/: README.md
docs/: access_matrix.md  api-resources-documentation.md  architecture.md  data_flows.md  esre01_user_guide.md  event_driven.md  reference.md  sre_user_guide.docx
executor/: CHANGELOG.md  Dockerfile  README.md  executor.py  requirements.txt
executor/helpers/: __init__.py  constants.py  exception.py  log_helper.py  profiling.py  resource_map_generator.py  security.py  time_helper.py  timeit.py
executor/integrations/: abstract_adapter.py  (+2 more)
obfuscation_manager/: README.md  pyproject.toml
obfuscator-cli/: README.md  obfuscation_manager.py
patches/: README.md
src/: .env.example  custodian_alignment.py  deployment_resources.json  entrypoint.sh  gunicorn.conf.py  main.py  requirements.txt  run.py  test_aws_collector.py  test_azure_collector.py  test_collection_and_storing.py  test_custodian_retrieval.py
tests/: commons.py  conftest.py  test_on_prem_api.py  test_rule_meta_updater.py
(+976 files in other folders)
