[project]
name = "syndicate-rule-engine"
description = "Service that allows to perform security scans on your infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = []
version = "5.7.0"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "coverage>=7.6.3",
    "pytest-cov>=5.0.0",
    "WebTest>=3.0.1",
    "pytest-xdist>=3.6.1",
    "moto>=5.0.17",
    "mongomock>=4"
]
c7n = [
    "c7n~=0.9.43",
    "c7n-azure~=0.7.42"
]


[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10"},
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["src/"]}
]


[tool.ruff]
line-length = 79
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py310"]
skipsdist = true
skip_install = true

[tool.tox.env_run_base]
description = "Run tests under {base_python}"

[tool.tox.env.py310]
dependency_groups = ["test", "c7n"]
deps = ["-r src/onprem/requirements.txt",]
commands = [[
    "pytest",
    "tests",
    "-v",
    "--cov=src/",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml",
    { replace = "posargs", extend = true}
]]
