[project]
name = "syndicate-rule-engine"
description = "Service that allows to perform security scans on your infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "apscheduler==3.11.0",
    "aws-xray-sdk~=2.14.0",
    "bcrypt==4.0.1",
    "boto3==1.36.11",
    "botocore==1.36.11",
    "bottle==0.12.25",
    "cachetools==5.5.1",
    "celery==5.4.0",
    "cryptography==43.0.3",
    "google-api-python-client==2.160.0",
    "google-auth==2.38.0",
    "gunicorn==20.1.0",
    "hvac==1.2.1",
    "jwcrypto==1.5.6",
    "modular-sdk @ git+https://github.com/epam/modular-sdk@pynamodb-pymongo",
    "msgspec==0.18.6",
    "openpyxl==3.0.10",
    "pydantic==2.8.2",
    "pymongo==4.10.1",
    "pynamodb==5.5.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz-deprecation-shim==0.1.0.post0",
    "redis==5.2.1",
    "requests==2.32.3",
    "ruamel-yaml==0.18.0",
    "ruamel-yaml-clib==0.2.12",
    "tabulate==0.9.0",
    "typing-extensions==4.12.2",
    "xlsxwriter==3.2.0",
]
version = "5.7.0"

[dependency-groups]
test = [
    "coverage>=7.6.12",
    "mongomock>=4.3.0",
    "moto>=5.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "webtest>=3.0.4",
]
c7n = [
    "c7n==0.9.43",
    "c7n-azure==0.7.42",
    "c7n-gcp==0.4.42",
    "c7n-kube==0.2.42",
]


[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10"},
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["src/"]}
]


[tool.ruff]
line-length = 79
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.tox]
requires = ["tox>=4.19"]
env_list = ["py310"]
skipsdist = true
skip_install = true

[tool.tox.env_run_base]
description = "Run tests under {base_python}"

[tool.tox.env.py310]
dependency_groups = ["test", "c7n"]
deps = ["-r src/onprem/requirements.txt",]
commands = [[
    "pytest",
    "tests",
    "-v",
    "--cov=src/",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml",
    { replace = "posargs", extend = true}
]]
