[project]
name = "syndicate-rule-engine"
description = "Service that allows to perform security scans on your infrastructure"
readme = "README.md"
requires-python = ">=3.10.2,<4.0.0"
license = {file = "LICENSE"}
version = "5.17.0"
dependencies = [
    "aws-xray-sdk~=2.14.0",
    "bcrypt~=4.0.1",
    "boto3~=1.42.27",
    "botocore~=1.42.27",
    "bottle~=0.12.25",
    "cachetools~=5.5.2",
    "celery==5.4.0",
    "cryptography~=45.0.7",
    "google-api-python-client~=2.188.0",
    "google-auth~=2.47.0",
    "gunicorn~=23.0.0",
    "hvac~=2.3.0",
    "jwcrypto~=1.5.6",
    "modular-sdk==7.1.9",
    "msgspec~=0.18.6",
    "openpyxl~=3.0.10",
    "pydantic~=2.8.2",
    "pymongo~=4.11.2",
    "pynamodb==6.1.0",
    "python-dateutil>=2.9.0.post0",
    "pytz-deprecation-shim~=0.1.0.post0",
    "redis~=5.2.1",
    "requests~=2.32.3",
    "ruamel-yaml~=0.18.0",
    "ruamel-yaml-clib~=0.2.12",
    "tabulate~=0.9.0",
    "typing-extensions~=4.13.2",
    "xlsxwriter~=3.2.0",
]

[dependency-groups]
test = [
    "coverage>=7.6.12",
    "mongomock>=4.3.0",
    "moto>=5.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "webtest>=3.0.4",
]
c7n = [
    "c7n==0.9.49",
    "c7n-azure==0.7.48",
    "c7n-gcp==0.4.48",
    "c7n-kube==0.2.48",
]


[tool.pyright]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
executionEnvironments = [
    {root = "src/", pythonVersion = "3.10"},
    {root = "tests/", pythonVersion = "3.10", extraPaths = ["src/"]}
]


[tool.ruff]
line-length = 79
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[tool.uv]
package = false
prerelease = "allow"  # for some azure lib
