[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "c7ncli"
description = "Rule engine CLI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "click~=7.1.2",
    "tabulate~=0.9.0",
    "boto3==1.26.80",
    "python-dateutil~=2.8.2",
    "modular-cli-sdk[hvac]~=2.0.0",
]

[project.scripts]
c7n = "c7ncli.group.c7n:c7n"

[tool.setuptools.dynamic]
version = {attr = "c7ncli.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["c7ncli*"]
namespaces = false

[tool.pyright]
include = ["c7ncli"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
