[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "srecli"
description = "Rule engine CLI"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "click==7.1.2",
    "tabulate==0.9.0",
    "boto3==1.26.80",
    "python-dateutil==2.8.2",
    "modular-cli-sdk[hvac]==2.0.0",
]

[project.scripts]
sre = "srecli.group.sre:sre"

[tool.setuptools.dynamic]
version = {attr = "srecli.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["srecli*"]
namespaces = false

[tool.pyright]
include = ["srecli"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.10"
reportIncompatibleMethodOverride = "warning"
