[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "rule-engine-obfuscation-manager"
description = "Cli to deobfuscate data"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
xlsx = ["openpyxl==3.0.10"]


[project.scripts]
sre-obfuscator = "obfuscation_manager:main"


[tool.setuptools.dynamic]
version = {attr = "obfuscation_manager.__version__"}


[tool.setuptools]
py-modules = ["obfuscation_manager"]


[tool.pyright]
include = ["obfuscation_manager.py"]
exclude = [
    "**/__pycache__",
]
pythonVersion = "3.8"
reportIncompatibleMethodOverride = "warning"
